Remove LineageOS stats reporting

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -209,7 +209,7 @@
         </activity-alias>
 
         <!-- Anonymous Statistics -->
-        <receiver android:name=".lineagestats.ReportingServiceManager"
+        <!-- <receiver android:name=".lineagestats.ReportingServiceManager"
             android:enabled="true"
             android:exported="false"
             android:label="ReportingServiceManager">
@@ -231,7 +231,7 @@
         <service android:name=".lineagestats.ReportingService"
                  android:label="ReportingService"
                  android:enabled="true"
-                 android:exported="false" />
+                 android:exported="false" /> -->
 
         <!-- Weather settings -->
         <activity-alias
